--- a/conf/initial-data.yml
+++ b/conf/initial-data.yml
@@ -1,5 +1,17 @@
 # Test data
 
+Tag(play):
+    name:           Play
+ 
+Tag(architecture):
+    name:           Architecture
+ 
+Tag(test):
+    name:           Test
+ 
+Tag(mvc):
+    name:           MVC
+
 User(bob):
     email:          bob@gmail.com
     password:       secret
@@ -59,3 +71,13 @@ Comment(c3):
                     This post is useless ?
     postedAt:       2009-04-05
     post:           secondBobPost
+Post(jeffPost):
+    title:          The MVC application
+    postedAt:       2009-06-06
+    author:         jeff
+    tags:
+                    - play
+                    - architecture
+                    - mvc
+    content:        >
+                    A Play
