--- a/conf/application.conf
+++ b/conf/application.conf
@@ -219,3 +219,6 @@ mail.smtp=mock
 # ~~~~~
 blog.title=Yet another blog
 blog.baseline=We will write about nothing
+
+# Import the crud module
+module.crud=${play.path}/modules/crud
