--- a/conf/application.conf
+++ b/conf/application.conf
@@ -222,3 +222,6 @@ blog.baseline=We will write about nothing
 
 # Import the crud module
 module.crud=${play.path}/modules/crud
+
+# Import the secure module
+module.secure=${play.path}/modules/secure
