--- a/.project
+++ b/.project
@@ -18,6 +18,8 @@
 	<linkedResources><link><name>crud</name><type>2</type><location>/opt/play/modules/crud/app</location></link>
 <link><name>conf/crud</name><type>2</type><location>/opt/play/modules/crud/conf</location></link>
 <link><name>public/crud</name><type>2</type><location>/opt/play/modules/crud/public</location></link>
+<link><name>jsonbinder-0.11</name><type>2</type><location>/home/eduardo/Área de Trabalho/treinamento/yabe/modules/jsonbinder-0.11/app</location></link>
+<link><name>conf/jsonbinder-0.11</name><type>2</type><location>/home/eduardo/Área de Trabalho/treinamento/yabe/modules/jsonbinder-0.11/conf</location></link>
 <link><name>secure</name><type>2</type><location>/opt/play/modules/secure/app</location></link>
 <link><name>conf/secure</name><type>2</type><location>/opt/play/modules/secure/conf</location></link>
 <link><name>public/secure</name><type>2</type><location>/opt/play/modules/secure/public</location></link>
